# hermes

./: .gitignore  CLAUDE.md  README.md  TODO.md  package-lock.json  package.json
.github/workflows/: ci.yml  native.yml
apps/native/: package.json
apps/native/src-tauri/: Cargo.toml  tauri.conf.json
apps/native/src-tauri/icons/: icon.icns
apps/native/src-tauri/src/: lib.rs
apps/web/: index.html  package.json  vite.config.js
apps/web/src/: App.jsx  index.css
apps/web/src/components/MarkdownText/: MarkdownText.jsx
apps/web/src/contexts/: AuthContext.jsx
apps/web/src/lib/: projectStorage.js  settingsStorage.js  supabase.js  workspaceStorage.js
apps/web/src/pages/FocusPage/: FocusChatWindow.jsx  FocusChatWindow.module.css  FocusPage.jsx  FocusPage.module.css  HighlightPopover.module.css  LinkTooltip.module.css  McpSettingsView.jsx  PageTabs.jsx  PageTabs.module.css  ProjectDropdown.jsx  ProjectDropdown.module.css  SettingsPanel.jsx  SettingsPanel.module.css  ShareButton.jsx  ShareButton.module.css  UserMenu.jsx  UserMenu.module.css  useHighlights.js
apps/web/src/pages/ReadPage/: ReadPage.jsx  ReadPage.module.css
scripts/: bundle-dmg.sh
server/: .env.example  mcp.json  package.json
server/src/: index.ts
server/src/lib/: mcp.ts  mcpValidation.ts
server/src/middleware/: auth.ts  usageGate.ts
server/src/routes/: assistant.ts  auth.ts  mcp.ts  stripe.ts  usage.ts
supabase/migrations/: 00005_add_published_pages.sql  00007_add_user_mcp_servers.sql
supabase/templates/: confirm-signup.html  reset-password.html
(+2 files in other folders)
