[package]
name = "hermes"
version = "0.2.0"
description = "Hermes — an opinionated, intelligent writing app"
authors = ["Hermes"]
edition = "2021"

[lib]
name = "hermes_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
debug-tools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
